--- a/estilo.css
+++ b/estilo.css
@@ -1,17 +1,13 @@
-/* 
-PT: Regra que torna o fundo da página transparente e desliga a barra de rolagem, já vem no OBS Browser 
-EN: Rule that set page background transparent and disable the scroll bar (OBS Browser default set)
-*/
+/*  PT: Regra que torna o fundo da página transparente e desliga a barra de rolagem, já vem no OBS Browser 
+    EN: Rule that set page background transparent and disable the scroll bar (OBS Browser default set)  */
 body {
     background-color: rgba(0, 0, 0, 0);
     margin: 0px auto;
     overflow: hidden;
 }
 
-/*
-PT: Regra que procura os elementos que estão abaixo da call e os define como transparente
-EN: Rule that search elements below voice call and set transparent 
-*/
+/*  Regra que procura os elementos que estão abaixo da call e os define como transparente
+    Rule that search elements below voice call and set transparent  */
 [class*="callContainer"],
 [class*="wrapper"],
 [class*="chat"],
@@ -20,10 +16,24 @@ EN: Rule that search elements below voice call and set transparent
     background-color: rgba(0, 0, 0, 0);
 }
 
-/*
-PT: Regra que torna sempre visível o nome do participante da call. É opcional, se não quiser essa função, basta não copiar essa regra.
-EN: Rule that set call members name always visible. It's optional, if you wont that function, just ignore that rule 
-*/
+/*  Abaixo, algumas regras que acho interessantes para usar o Discord no OBS. São opcionais, copie apenas o que achar útil.
+    That some rules I think are useful when using Discord in OBS. It's optional, just copy what you want.  */
+
+/*  Regra que torna sempre visível o nome do participante da call.
+    Rule that set call members name always visible.  */
 [class*="overlayTitle"] {
-    opacity: 100;
+    opacity: 100%!important;
+}
+
+/*  Regra que remove a barra do "Modo Streamer"
+    Rule that remove "Streamer Mode" tab  */
+[class*="colorStreamerMode"] {
+    display: none;
+}
+
+/*  Regra que aumenta o tamanho do ícone dos participantes da call. 
+    Rule that increase call members icon size. */
+[class*="avatarWrapper"] {
+    width: 40%!important;
+    height: 70%!important;
 }
