--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 /*  PT: Regra que torna o fundo da página transparente e desliga a barra de rolagem, já vem no OBS Browser 
-    EN: Rule that set page background transparent and disable the scroll bar (OBS Browser default set)  */
+    EN: Rule that sets page background as transparent and disable the scroll bar (OBS Browser default setting)  */
 body {
     background-color: rgba(0, 0, 0, 0);
     margin: 0px auto;
@@ -7,7 +7,7 @@ body {
 }
 
 /*  Regra que procura os elementos que estão abaixo da call e os define como transparente
-    Rule that search elements below voice call and set transparent  */
+    Rule that searches for elements below the voice call and sets them as transparent  */
 [class*="callContainer"],
 [class*="wrapper"],
 [class*="chat"],
@@ -17,22 +17,22 @@ body {
 }
 
 /*  Abaixo, algumas regras que acho interessantes para usar o Discord no OBS. São opcionais, copie apenas o que achar útil.
-    That some rules I think are useful when using Discord in OBS. It's optional, just copy what you want.  */
+    Below, there are some rules I think would be useful when using Discord in OBS. They're optional, just copy whatever you think is useful.  */
 
 /*  Regra que torna sempre visível o nome do participante da call.
-    Rule that set call members name always visible.  */
+    Rule that sets call members names as always visible.  */
 [class*="overlayTitle"] {
     opacity: 100%!important;
 }
 
 /*  Regra que remove a barra do "Modo Streamer"
-    Rule that remove "Streamer Mode" tab  */
+    Rule that removes the "Streamer Mode" tab  */
 [class*="colorStreamerMode"] {
     display: none;
 }
 
 /*  Regra que aumenta o tamanho do ícone dos participantes da call. 
-    Rule that increase call members icon size. */
+    Rule that increases call members icon size. */
 [class*="avatarWrapper"] {
     width: 40%!important;
     height: 70%!important;
